k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-11-03T12:33:48Z"
  labels:
    app: hello
  name: hello
  namespace: interview
  resourceVersion: "3511"
  uid: 71a8d08a-4cf2-4a17-8e1b-66ce23fa2763
spec:
  clusterIP: 10.101.38.30
  clusterIPs:
  - 10.101.38.30
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31244
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
